added spinner to the dashboard component - added private route - added alert in authActions and profileAction - slight modification in alert

--- a/devUI/src/App.css
+++ b/devUI/src/App.css
@@ -50,3 +50,10 @@ img {
 .nav-link-btn {
     border: none;
 }
+
+.spinner-comp {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
