--- a/devUI/src/App.css
+++ b/devUI/src/App.css
@@ -52,7 +52,7 @@ img {
 }
 
 .spinner-comp {
-    position: absolute;
+    position: fixed; /* to avoid absolute to any relative position */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
