--- a/devUI/src/App.css
+++ b/devUI/src/App.css
@@ -66,3 +66,10 @@ img {
 .display-4 {
     font-size: 3rem;
 }
+
+.btn-xs {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.75rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
