--- a/devUI/src/App.css
+++ b/devUI/src/App.css
@@ -58,7 +58,7 @@ img {
     transform: translate(-50%, -50%);
 }
 
-/* overwrite the bootstrap css classes */
+/* overwrite the bootstrap css classes - start */
 .lead {
     font-size: 1.1rem;
 }
@@ -66,10 +66,19 @@ img {
 .display-4 {
     font-size: 3rem;
 }
+/* overwrite the bootstrap css classes - end */
 
 .btn-xs {
     padding: 0.25rem 0.5rem;
     font-size: 0.75rem;
     line-height: 1.5;
     border-radius: 0.2rem;
+}
+
+.profile-avatar {
+    max-width: 250px;
+}
+
+.text-sm {
+    font-size: 0.65rem;
 }
