Added post section - save a post - retrieve all post or by a user (API and UI both are done) - Added post feed link in the navbar - minor things

--- a/devUI/src/App.css
+++ b/devUI/src/App.css
@@ -58,6 +58,14 @@ img {
     transform: translate(-50%, -50%);
 }
 
+.spinner-absolute {
+    position: absolute;
+}
+
+.div-relative {
+    position: relative;
+}
+
 /* overwrite the bootstrap css classes - start */
 .lead {
     font-size: 1.1rem;
